--- a/OOPs/ch_03_Inheritance.ipynb
+++ b/OOPs/ch_03_Inheritance.ipynb
@@ -384,7 +384,456 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Overriding methods and using the `super` keyword.\n",
+    "\n",
+    "The `super` keyword in Java is used to refer to the superclass, either directly or to call the superclass's methods. It is often used in the context of method overriding, where a subclass provides a specific implementation for a method that is already defined in its superclass. The `super` keyword is used to differentiate between the superclass's method and the overridden method in the subclass.\n",
+    "\n",
+    "### 1. **Calling Superclass Methods:**\n",
+    "\n",
+    "In the context of method overriding, you can use the `super` keyword to call the overridden method from the superclass. This is particularly useful when you want to extend the functionality of the superclass's method in the subclass.\n",
+    "\n",
+    "```java\n",
+    "// Superclass\n",
+    "public class Animal {\n",
+    "    public void makeSound() {\n",
+    "        System.out.println(\"Generic animal sound\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Subclass\n",
+    "public class Dog extends Animal {\n",
+    "    @Override\n",
+    "    public void makeSound() {\n",
+    "        super.makeSound(); // Calling the superclass's makeSound method\n",
+    "        System.out.println(\"Bark, bark!\");\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this example, the `Dog` class overrides the `makeSound` method from the `Animal` superclass. The `super.makeSound()` call invokes the `makeSound` method from the superclass before adding the specific behavior in the subclass. The output will include both the generic animal sound and the bark:\n",
+    "\n",
+    "```java\n",
+    "Generic animal sound\n",
+    "Bark, bark!\n",
+    "```\n",
+    "\n",
+    "### 2. **Referring to Superclass Fields:**\n",
+    "\n",
+    "The `super` keyword can also be used to refer to the superclass's fields, especially when a subclass has a field with the same name as a field in the superclass. This helps to distinguish between the superclass and subclass fields.\n",
+    "\n",
+    "```java\n",
+    "// Superclass\n",
+    "public class Animal {\n",
+    "    protected String name = \"Generic Animal\";\n",
+    "}\n",
+    "\n",
+    "// Subclass\n",
+    "public class Dog extends Animal {\n",
+    "    private String name = \"Dog\";\n",
+    "\n",
+    "    public void printNames() {\n",
+    "        System.out.println(\"Subclass name: \" + name);      // Accessing the subclass field\n",
+    "        System.out.println(\"Superclass name: \" + super.name); // Accessing the superclass field using super\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this example, the `Dog` class has a field named `name`, and the superclass `Animal` also has a field named `name`. The `super.name` syntax is used to refer to the `name` field in the superclass.\n",
+    "\n",
+    "### 3. **Calling Superclass Constructors:**\n",
+    "\n",
+    "The `super` keyword is also used to call the constructor of the superclass from the constructor of the subclass. This is commonly done in the constructor of the subclass using `super()`.\n",
+    "\n",
+    "```java\n",
+    "// Superclass\n",
+    "public class Animal {\n",
+    "    protected String name;\n",
+    "\n",
+    "    public Animal(String name) {\n",
+    "        this.name = name;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Subclass\n",
+    "public class Dog extends Animal {\n",
+    "    private String breed;\n",
+    "\n",
+    "    public Dog(String name, String breed) {\n",
+    "        super(name); // Calling the superclass constructor\n",
+    "        this.breed = breed;\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this example, the `Dog` class's constructor uses `super(name)` to call the constructor of the `Animal` superclass, ensuring that the `name` field in the superclass is properly initialized.\n",
+    "\n",
+    "Using the `super` keyword in these contexts allows for clear and explicit reference to the superclass in cases of method overriding, field naming conflicts, or constructor chaining. It helps maintain a clear distinction between the behaviors and fields of the subclass and those of the superclass."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The difference between classes and interfaces.\n",
+    "\n",
+    "Classes and interfaces are two fundamental concepts in object-oriented programming (OOP), but they serve different purposes and have distinct characteristics. Here are the key differences between classes and interfaces:\n",
+    "\n",
+    "### 1. **Purpose and Usage:**\n",
+    "\n",
+    "- **Classes:**\n",
+    "  - Classes are used to define blueprints for objects. They encapsulate data (attributes/fields) and behavior (methods) into a single unit.\n",
+    "  - Objects are instances of classes, and they can be created based on the structure defined by a class.\n",
+    "  - Classes can have constructors to initialize object state and can be used to create and manage objects.\n",
+    "\n",
+    "- **Interfaces:**\n",
+    "  - Interfaces declare a contract for classes. They define a set of methods (and possibly constants) that classes implementing the interface must provide.\n",
+    "  - Interfaces are used to achieve abstraction and provide a common interface for multiple classes.\n",
+    "  - A class can implement multiple interfaces, allowing it to conform to different contracts.\n",
+    "\n",
+    "### 2. **Inheritance:**\n",
+    "\n",
+    "- **Classes:**\n",
+    "  - Classes support both single and multiple inheritance in some programming languages (e.g., Java supports single inheritance with classes).\n",
+    "  - Inheritance allows a subclass to inherit the properties and behaviors of a superclass.\n",
+    "\n",
+    "- **Interfaces:**\n",
+    "  - Interfaces support multiple inheritance. A class can implement multiple interfaces, allowing it to inherit method signatures from different sources.\n",
+    "  - Unlike classes, interfaces do not provide an implementation; they only declare method signatures.\n",
+    "\n",
+    "### 3. **Constructors:**\n",
+    "\n",
+    "- **Classes:**\n",
+    "  - Classes can have constructors, which are special methods used for initializing object state when an object is created.\n",
+    "  - Constructors are not declared in the class interface; they are part of the implementation.\n",
+    "\n",
+    "- **Interfaces:**\n",
+    "  - Interfaces cannot have constructors. They define method signatures but do not provide an implementation.\n",
+    "\n",
+    "### 4. **Fields (Variables):**\n",
+    "\n",
+    "- **Classes:**\n",
+    "  - Classes can have instance variables (fields) to store data.\n",
+    "  - Fields can have different access modifiers (e.g., public, private) to control visibility.\n",
+    "\n",
+    "- **Interfaces:**\n",
+    "  - Interfaces can declare constants (fields with `static final` modifiers), but they cannot have instance variables with arbitrary values.\n",
+    "\n",
+    "### 5. **Abstract Methods:**\n",
+    "\n",
+    "- **Classes:**\n",
+    "  - Classes can have abstract methods (methods without an implementation) if the class itself is declared as abstract.\n",
+    "  - Abstract methods in classes are meant to be overridden by concrete subclasses.\n",
+    "\n",
+    "- **Interfaces:**\n",
+    "  - All methods declared in an interface are implicitly abstract. Classes implementing an interface must provide a concrete implementation for all interface methods.\n",
+    "\n",
+    "### 6. **Default Methods and Static Methods:**\n",
+    "\n",
+    "- **Classes:**\n",
+    "  - Classes can have both instance and static methods.\n",
+    "\n",
+    "- **Interfaces:**\n",
+    "  - Interfaces can have default methods (methods with a default implementation) and static methods starting from Java 8.\n",
+    "\n",
+    "### Example:\n",
+    "\n",
+    "Here's a simple example to illustrate the difference:\n",
+    "\n",
+    "```java\n",
+    "// Class example\n",
+    "public class Animal {\n",
+    "    private String name;\n",
+    "\n",
+    "    public Animal(String name) {\n",
+    "        this.name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void makeSound() {\n",
+    "        System.out.println(\"Generic animal sound\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Interface example\n",
+    "public interface Eater {\n",
+    "    void eat();\n",
+    "}\n",
+    "\n",
+    "// Class implementing an interface\n",
+    "public class Dog extends Animal implements Eater {\n",
+    "    public Dog(String name) {\n",
+    "        super(name);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public void makeSound() {\n",
+    "        System.out.println(\"Bark, bark!\");\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public void eat() {\n",
+    "        System.out.println(\"Dog is eating\");\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this example, `Animal` is a class, `Eater` is an interface, and `Dog` is a class that extends `Animal` and implements `Eater`. The class provides specific implementations for the `makeSound` method inherited from `Animal` and the `eat` method from the `Eater` interface."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Class example\n",
+    "public class Animal {\n",
+    "    private String name;\n",
+    "\n",
+    "    public Animal(String name) {\n",
+    "        this.name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void makeSound() {\n",
+    "        System.out.println(\"Generic animal sound\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Interface example\n",
+    "public interface Eater {\n",
+    "    void eat();\n",
+    "}\n",
+    "\n",
+    "// Class implementing an interface\n",
+    "public class Dog extends Animal implements Eater {\n",
+    "    public Dog(String name) {\n",
+    "        super(name);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public void makeSound() {\n",
+    "        System.out.println(\"Bark, bark!\");\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public void eat() {\n",
+    "        System.out.println(\"Dog is eating\");\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example:\n",
+    "\n",
+    "Certainly! Let's consider a classic example of inheritance using a simple shape hierarchy. We'll create a base class `Shape` and two derived classes, `Circle` and `Rectangle`, to demonstrate how inheritance works:\n",
+    "\n",
+    "```java\n",
+    "// Base class\n",
+    "class Shape {\n",
+    "    protected String color;\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Shape(String color) {\n",
+    "        this.color = color;\n",
+    "    }\n",
+    "\n",
+    "    // Method to get the area (to be overridden by subclasses)\n",
+    "    public double getArea() {\n",
+    "        return 0.0;\n",
+    "    }\n",
+    "\n",
+    "    // Method to display information about the shape\n",
+    "    public void displayInfo() {\n",
+    "        System.out.println(\"This is a \" + color + \" shape.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Derived class 1\n",
+    "class Circle extends Shape {\n",
+    "    private double radius;\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Circle(String color, double radius) {\n",
+    "        super(color); // Call to the superclass constructor\n",
+    "        this.radius = radius;\n",
+    "    }\n",
+    "\n",
+    "    // Override the getArea method\n",
+    "    @Override\n",
+    "    public double getArea() {\n",
+    "        return Math.PI * radius * radius;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Derived class 2\n",
+    "class Rectangle extends Shape {\n",
+    "    private double length;\n",
+    "    private double width;\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Rectangle(String color, double length, double width) {\n",
+    "        super(color); // Call to the superclass constructor\n",
+    "        this.length = length;\n",
+    "        this.width = width;\n",
+    "    }\n",
+    "\n",
+    "    // Override the getArea method\n",
+    "    @Override\n",
+    "    public double getArea() {\n",
+    "        return length * width;\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this example:\n",
+    "\n",
+    "- The `Shape` class serves as the base class, defining a common interface for all shapes, along with a color attribute.\n",
+    "- The `Circle` and `Rectangle` classes are derived from the `Shape` class. They inherit the color attribute and methods from the base class.\n",
+    "- Both `Circle` and `Rectangle` override the `getArea` method to provide specific implementations for calculating the area of a circle and rectangle, respectively.\n",
+    "\n",
+    "Now, let's use these classes:\n",
+    "\n",
+    "```java\n",
+    "public class InheritanceExample {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Create instances of Circle and Rectangle\n",
+    "        Circle circle = new Circle(\"Red\", 5.0);\n",
+    "        Rectangle rectangle = new Rectangle(\"Blue\", 4.0, 6.0);\n",
+    "\n",
+    "        // Display information and calculate areas\n",
+    "        circle.displayInfo();\n",
+    "        System.out.println(\"Area of the circle: \" + circle.getArea());\n",
+    "\n",
+    "        rectangle.displayInfo();\n",
+    "        System.out.println(\"Area of the rectangle: \" + rectangle.getArea());\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Output:\n",
+    "```\n",
+    "This is a Red shape.\n",
+    "Area of the circle: 78.53981633974483\n",
+    "This is a Blue shape.\n",
+    "Area of the rectangle: 24.0\n",
+    "```\n",
+    "\n",
+    "This example demonstrates the power of inheritance. The `Circle` and `Rectangle` classes inherit common functionality (like `displayInfo`) and share a common interface (`Shape`). The overridden `getArea` methods allow each subclass to provide its own implementation. Inheritance promotes code reuse and a clear, hierarchical structure in your codebase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Base class\n",
+    "class Shape {\n",
+    "    protected String color;\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Shape(String color) {\n",
+    "        this.color = color;\n",
+    "    }\n",
+    "\n",
+    "    // Method to get the area (to be overridden by subclasses)\n",
+    "    public double getArea() {\n",
+    "        return 0.0;\n",
+    "    }\n",
+    "\n",
+    "    // Method to display information about the shape\n",
+    "    public void displayInfo() {\n",
+    "        System.out.println(\"This is a \" + color + \" shape.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Derived class 1\n",
+    "class Circle extends Shape {\n",
+    "    private double radius;\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Circle(String color, double radius) {\n",
+    "        super(color); // Call to the superclass constructor\n",
+    "        this.radius = radius;\n",
+    "    }\n",
+    "\n",
+    "    // Override the getArea method\n",
+    "    @Override\n",
+    "    public double getArea() {\n",
+    "        return Math.PI * radius * radius;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Derived class 2\n",
+    "class Rectangle extends Shape {\n",
+    "    private double length;\n",
+    "    private double width;\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Rectangle(String color, double length, double width) {\n",
+    "        super(color); // Call to the superclass constructor\n",
+    "        this.length = length;\n",
+    "        this.width = width;\n",
+    "    }\n",
+    "\n",
+    "    // Override the getArea method\n",
+    "    @Override\n",
+    "    public double getArea() {\n",
+    "        return length * width;\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a Red shape.\n",
+      "Area of the circle: 78.53981633974483\n",
+      "This is a Blue shape.\n",
+      "Area of the rectangle: 24.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Create instances of Circle and Rectangle\n",
+    "Circle circle = new Circle(\"Red\", 5.0);\n",
+    "Rectangle rectangle = new Rectangle(\"Blue\", 4.0, 6.0);\n",
+    "\n",
+    "// Display information and calculate areas\n",
+    "circle.displayInfo();\n",
+    "System.out.println(\"Area of the circle: \" + circle.getArea());\n",
+    "\n",
+    "rectangle.displayInfo();\n",
+    "System.out.println(\"Area of the rectangle: \" + rectangle.getArea());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Thank You!**"
+   ]
   }
  ],
  "metadata": {
