--- a/OOPs/ch_05_Abstraction.ipynb
+++ b/OOPs/ch_05_Abstraction.ipynb
@@ -112,11 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "// Abstract Shape class\n",
@@ -467,11 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -604,6 +596,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "In this example:\n",
+    "\n",
+    "- **Interface (`Account`):** Defines a common set of methods that any account type should implement (deposit, withdraw, getBalance).\n",
+    "\n",
+    "- **Abstract Class (`AbstractAccount`):** Provides a generic implementation for common account functionalities. It contains both abstract and concrete methods. The abstract method `applyInterest` is specific to each account type and must be implemented by concrete subclasses.\n",
+    "\n",
+    "- **Concrete Classes (`SavingsAccount` and `CheckingAccount`):** Implement specific types of accounts. They extend the abstract class and provide implementations for the abstract method (`applyInterest`). Each class encapsulates its specific behavior, such as interest calculations and overdraft handling.\n",
+    "\n",
+    "- **Usage in the Main Program (`BankingExample`):** Demonstrates the usage of abstraction by creating instances of different account types (savings and checking) using the common `Account` interface. Polymorphism allows treating objects of different types uniformly through their common interface.\n",
+    "\n",
+    "This example illustrates how abstraction, encapsulation, and polymorphism work together to create a flexible and maintainable codebase for a banking system. Each account type can be extended or modified independently without affecting the overall structure of the system."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Thank You!**"
    ]
   }
@@ -618,7 +628,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.8.1+1-Ubuntu-0ubuntu122.04"
   }
