--- a/OOPs/ch_08_Composition.ipynb
+++ b/OOPs/ch_08_Composition.ipynb
@@ -404,7 +404,139 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Relationship between classes through composition.\n",
+    "\n",
+    "In object-oriented programming, composition establishes a relationship between classes by allowing one class to contain instances of another class as part of its state. This relationship is often referred to as a \"has-a\" relationship, indicating that one class has another class as a component. Composition provides a way to build complex objects by combining simpler ones, and it promotes code reuse, flexibility, and modularity.\n",
+    "\n",
+    "Let's explore this concept with an example of composition involving two classes: `Library` and `Book`. The `Library` class contains instances of the `Book` class to represent the books available in the library.\n",
+    "\n",
+    "```java\n",
+    "// Book class\n",
+    "class Book {\n",
+    "    private String title;\n",
+    "    private String author;\n",
+    "\n",
+    "    public Book(String title, String author) {\n",
+    "        this.title = title;\n",
+    "        this.author = author;\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public String toString() {\n",
+    "        return \"'\" + title + \"' by \" + author;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Library class composed of Book instances\n",
+    "class Library {\n",
+    "    private String libraryName;\n",
+    "    private Book[] books;\n",
+    "\n",
+    "    public Library(String libraryName, Book[] books) {\n",
+    "        this.libraryName = libraryName;\n",
+    "        this.books = books;\n",
+    "    }\n",
+    "\n",
+    "    public void displayBooks() {\n",
+    "        System.out.println(\"Books in \" + libraryName + \":\");\n",
+    "        for (Book book : books) {\n",
+    "            System.out.println(\"- \" + book);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this example:\n",
+    "\n",
+    "- The `Book` class represents a book with attributes like `title` and `author`.\n",
+    "\n",
+    "- The `Library` class is composed of an array of `Book` instances. The `Library` \"has-a\" collection of books.\n",
+    "\n",
+    "- The `Library` class has a method `displayBooks()` to display the list of books it contains.\n",
+    "\n",
+    "Now, let's use these classes in the `main` method to demonstrate the relationship between `Library` and `Book` through composition:\n",
+    "\n",
+    "```java\n",
+    "public class CompositionRelationshipExample {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Creating individual Book instances\n",
+    "        Book book1 = new Book(\"The Great Gatsby\", \"F. Scott Fitzgerald\");\n",
+    "        Book book2 = new Book(\"To Kill a Mockingbird\", \"Harper Lee\");\n",
+    "        Book book3 = new Book(\"1984\", \"George Orwell\");\n",
+    "\n",
+    "        // Creating an array of Book instances\n",
+    "        Book[] booksInLibrary = {book1, book2, book3};\n",
+    "\n",
+    "        // Creating a Library with composition\n",
+    "        Library myLibrary = new Library(\"City Library\", booksInLibrary);\n",
+    "\n",
+    "        // Displaying the books in the library\n",
+    "        myLibrary.displayBooks();\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this usage example:\n",
+    "\n",
+    "- Individual `Book` instances are created independently.\n",
+    "\n",
+    "- These instances are then used to create an array of `Book` instances.\n",
+    "\n",
+    "- The `Library` class is then instantiated with the array of books, establishing a composition relationship between `Library` and `Book`.\n",
+    "\n",
+    "- The `displayBooks()` method of the `Library` class is invoked to display the books in the library.\n",
+    "\n",
+    "This example demonstrates how composition allows for the creation of complex objects (`Library`) by combining simpler objects (`Book`). The `Library` class encapsulates the behavior related to managing a collection of books, and the `Book` class encapsulates the details of each book. The relationship between these classes through composition promotes modular and reusable code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Advantages of composition over inheritance.\n",
+    "\n",
+    "Composition and inheritance are both important concepts in object-oriented programming (OOP), and each has its own set of advantages and use cases. However, there are situations where composition is preferred over inheritance. Here are some advantages of composition over inheritance:\n",
+    "\n",
+    "1. **Flexibility and Modifiability:**\n",
+    "   - Composition allows for greater flexibility in design and is more adaptable to changes. With composition, you can easily modify the behavior of a class by changing or adding components without affecting other parts of the system. This is particularly beneficial in situations where requirements are likely to change.\n",
+    "\n",
+    "2. **Reduced Coupling:**\n",
+    "   - Composition reduces the coupling between classes. When a class is composed of other classes, it is not tightly bound to the implementation details of those classes. This loose coupling makes the code more maintainable and less prone to unintended side effects when changes are made.\n",
+    "\n",
+    "3. **Code Reusability:**\n",
+    "   - Composition promotes code reuse by allowing the reuse of individual components in different contexts. Components can be used in multiple classes, leading to more modular and maintainable code.\n",
+    "\n",
+    "4. **Dynamic Behavior:**\n",
+    "   - Composition allows for dynamic behavior at runtime. Objects can be composed or decomposed during the program's execution, providing greater flexibility in constructing complex objects based on changing requirements.\n",
+    "\n",
+    "5. **Avoidance of Fragile Base Class Problem:**\n",
+    "   - The Fragile Base Class Problem occurs when changes to a base class (inherited class) can unintentionally break the functionality of derived classes. Composition avoids this problem because changes to one class don't impact the behavior of other classes.\n",
+    "\n",
+    "6. **Encapsulation:**\n",
+    "   - Composition supports encapsulation by allowing objects to encapsulate the behavior of their constituent objects. Each class can have its own methods and attributes, and the internal details of one class are hidden from the other, promoting information hiding.\n",
+    "\n",
+    "7. **Easier Testing:**\n",
+    "   - Testing is simplified when using composition because each component can be tested independently. This allows for more focused unit testing, making it easier to identify and fix issues.\n",
+    "\n",
+    "8. **Better Support for Interface-Based Programming:**\n",
+    "   - Composition aligns well with interface-based programming, where classes implement interfaces and can be composed of multiple interfaces. This approach provides a more modular and flexible structure.\n",
+    "\n",
+    "9. **No Diamond Inheritance Issues:**\n",
+    "   - Composition avoids the complexities and potential issues associated with diamond inheritance problems. In multiple inheritance scenarios, composition can be a simpler and safer alternative.\n",
+    "\n",
+    "10. **Improved Design for Certain Scenarios:**\n",
+    "    - Certain design patterns, such as the Strategy Pattern or the Decorator Pattern, are more naturally implemented using composition. These patterns allow behavior to be composed dynamically at runtime.\n",
+    "\n",
+    "While composition has its advantages, it's essential to note that both composition and inheritance have their places in OOP, and the choice between them depends on the specific requirements of a given design. In many cases, a combination of both composition and inheritance might be the most effective approach."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Thank You!**"
+   ]
   }
  ],
  "metadata": {
